Fixed vertical spacing on the blog posts page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -759,6 +759,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 #portfolios .mix {
   padding: 10px;
+  padding-top:20px;
 }
 
 #portfolios .portfolio-item .shot-item {
@@ -923,6 +924,10 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 /* Blog Page */
+#post div{
+  margin-top: 15px;
+}
+
 .blog-list {
   background: #fff;
   border-radius: 4px;
